<resources>
    <string name="app_name">Coursera Contacts</string>

    <string name="contact_name">Joaquín Alvidrez</string>
    <string name="contact_telephone">8181697573</string>
    <string name="contact_email">joaquin_alan@hotmail.com</string>

    <string name="contactadapter_extracontactname">NAME</string>
    <string name="contactadapter_extracontactphone">PHONE</string>
    <string name="contactadapter_extracontactemail">EMAIL</string>

    <string name="contactcardview_name">Nombre</string>
    <string name="contactcardview_phone">Teléfono</string>
    <string name="contactcardview_thumbupmessage">"You like "</string>
    <string name="contactcardview_numberoflikes">10</string>
    <string name="contactcardview_likelabel">Likes</string>

    <string name="contactdetail_toolbartitle">Contact Detail</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="test">test</string>
    <string name="test2">test2</string>
</resources>
