<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cv_contact"
    android:layout_width="280dp"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/activity_vertical_margin"
    card_view:cardCornerRadius="@dimen/card_view_corner_radius">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/card_view_padding">

        <ImageView
            android:id="@+id/imageview_contactcardview_image"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/led_zeppelin_logo" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/button_contactcardview_thumbup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:background="@drawable/thumb_up_48" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textview_contactcardview_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/contactcardview_name"
                    android:textSize="@dimen/card_view_name"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textview_contactcardview_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/contactcardview_phone"
                    android:textSize="@dimen/card_view_name"
                    android:textStyle="bold" />
            </LinearLayout>

            <TextView
                android:id="@+id/textview_contactcardview_numberoflikes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@+id/textview_contactcardview_likelabel"
                android:text="@string/contactcardview_numberoflikes"
                android:textSize="@dimen/card_view_name"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textview_contactcardview_likelabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginLeft="5dp"
                android:layout_centerVertical="true"
                android:text="@string/contactcardview_likelabel"
                android:textSize="@dimen/card_view_name"
                android:textStyle="bold" />
        </RelativeLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>